# eeg-yolo

./: .gitignore  README.md  annotations.py  bugs.md  config.yaml  dataset.py  model_structure.txt  novelty.md  pyproject.toml  rawnovelty.md  results.txt  results_classification.txt  results_classification_two_stage.txt  results_quickcheck.txt  results_sweepcheck.txt  test_loader.py  test_model.py  train.py
docs/: model_info.txt  report.aux  report.out  report.tex  training.md
src/: config.py
src/data_processing/: check_mat.py  clean_annotations.py  compact_dataset.py  extract_events.py  filter_events.py  mat_to_parquet.py  npy.py  remove_sleep_markers.py  rename_dataset.py
src/model/: yolo1d.py  yolo2d.py
src/training/: annotation_parser.py  classification_dataset.py  dataset.py  target_builder.py  train.py  train_classification.py  train_classification_two_stage.py
src/ui/: dashboard.py
tests/: test_annotation_pipeline.py
