[project]
name = "yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mne>=1.11.0",
    "numpy>=1.26,<2.5",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
