[project]
name = "yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mne>=1.11.0",
    "numpy>=1.26,<2.5",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
